ci(go): find only in go folder

--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -14,4 +14,4 @@ jobs:
         with:
           go-version: "^1.19"
       - name: tests
-        run: find . -name go.mod -execdir go test ./... \;
+        run: find go -name go.mod -execdir go test ./... \;
