--- a/.github/workflows/gleam.yaml
+++ b/.github/workflows/gleam.yaml
@@ -12,7 +12,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: erlef/setup-beam@v1
         with:
-          otp-version: 26
+          otp-version: 26.2.3
+          rebar3-version: 3.22.1
           gleam-version: 1.0.0
       - name: tests
         run: find gleam -name gleam.toml -maxdepth 2 -execdir gleam test \;
